add, sub, mul, div, enter function

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div id="display"></div>
-  <div id="display2"></div>
+  <div id="display2"></div> 
   <div id="numbers">
+    <button>0</button>
     <button>1</button>
     <button>2</button>
     <button>3</button>
